--- a/src/app/Components/Navigation/top-navbar/top-navbar.component.html
+++ b/src/app/Components/Navigation/top-navbar/top-navbar.component.html
@@ -25,6 +25,8 @@
       <div class="dropdown-content">
         <a class="list-itm" routerLink="./party" routerLinkActive="active">
           Add Party</a>
+          <a class="list-itm" routerLink="./addRoom" routerLinkActive="active">
+            Add Room</a>
         <a class="list-itm" routerLink="./AddUser" routerLinkActive="active">
           Add User</a>
         <a class="list-itm" routerLink="./OwnerProfile" routerLinkActive="active">
