--- a/src/app/Components/Navigation/top-navbar/top-navbar.component.html
+++ b/src/app/Components/Navigation/top-navbar/top-navbar.component.html
@@ -10,6 +10,8 @@
 
     <a class="list-itm" routerLink="./voucher" routerLinkActive="active">
       Voucher</a>
+      <a class="list-itm" routerLink="./bkng" routerLinkActive="active">
+        Booking</a>
 
       <a class="list-itm" routerLink="./bdgtng" routerLinkActive="active">
         Budgeting</a>
