--- a/src/app/Components/booking/confirm-booking/confirm-booking.component.html
+++ b/src/app/Components/booking/confirm-booking/confirm-booking.component.html
@@ -5,13 +5,13 @@
     <div class="text-center container-fluid " >
         <mat-form-field class="w-100" appearance="outline">
         <mat-label>Enter Advance Amount</mat-label>
-        <input matInput type="number" [(ngModel)]="advanceAmount">
+        <input matInput type="number" [disabled]="bookingStatus == 'Confirmed'" [(ngModel)]="advanceAmount">
         </mat-form-field>
 
         <mat-form-field class="w-100" appearance="outline">
             <mat-label>Select COA</mat-label>
             <mat-select [(ngModel)]="coaID">
-                <mat-option *ngFor="let item of coaList" [value]="item.coaID">{{item.caoTitle}} </mat-option>
+                <mat-option *ngFor="let item of coaList" [value]="item.coaID">{{item.coaTitle}} </mat-option>
             </mat-select>
         </mat-form-field>
 
