--- a/src/app/Components/booking/booking.component.html
+++ b/src/app/Components/booking/booking.component.html
@@ -63,7 +63,7 @@
 
           <mat-form-field class="w-50 p-2" appearance="outline">
             <mat-label>Select Departure Date</mat-label>
-            <input readonly="true" matInput   [(ngModel)]="DepartureDate"
+            <input readonly="true" matInput  [min]="curDate"  [(ngModel)]="DepartureDate"
                 [matDatepicker]="DDate" >
             <mat-datepicker-toggle matSuffix [for]="DDate"></mat-datepicker-toggle>
             <mat-datepicker #DDate></mat-datepicker>
@@ -154,7 +154,7 @@
                         <th>Confirmation Date</th>
                         <th>Status</th>
                         <th>Actions</th>
-                        <!-- <th>Cancel Booking</th> -->
+                        <th>Print</th>
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of SavedData | filter: searchBooking ; index as index">
@@ -171,7 +171,7 @@
 
                             <td  class="cursorPointer " >
                                 <button class="btn btn-success me-2" (click)="confirmBooking(item)" *ngIf="item.bookingStatus == 'Pending' ">Confirm</button>
-                                <button class="btn btn-warning me-2"  *ngIf="item.bookingStatus == 'Confirmed' ">Refund</button>
+                                <button class="btn btn-warning me-2"  (click)="confirmBooking(item)"  *ngIf="item.bookingStatus == 'Confirmed' ">Refund</button>
 
                               
     
@@ -180,6 +180,7 @@
                                 <span class="text-danger" *ngIf="item.bookingStatus == 'Cancelled' ">Bill Cancelled</span>
                                 <span class="text-danger" *ngIf="item.bookingStatus == 'Refunded' ">Bill Refunded</span>
                             </td>
+                            <td class="cursorPointer"><mat-icon class="text-primary" (click)="printBooking(item)">print</mat-icon></td>
                            
             
                         </tr>
@@ -220,6 +221,135 @@
               </div>
             </div>
           </div>
+
+
+
+          <!---------------------- print Area for Booking Voucher ------------------>
+
+
+          <div class="d-none " id="printDiv">
+            <div class="text-end ">{{lblVoucherPrintDate |date:'short'}}</div>
+            <div class="mt-2">
+                
+                <!-------------------------    Top Logo Section -------------------->
+                <div class="text-center border-bottom d-flex justify-content-between">
+                    <span>
+                        <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100"
+                            width="100">
+                    </span>
+                    <span class="mt-3">
+                        <h3>Black Gold Hotel</h3>
+                            <p class="text-end" style="margin-top: -15;">Mehria Town Pvt.(Ltd)</p>
+                        <p style="margin-top: -20;">Kamra Road Attock</p>
+                        <p style="margin-top: -15;">Phone No: 057-2364801-2</p>
+                    </span>
+                    <span>
+                        <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
+                            width="100">
+                    </span>
+            
+            
+                </div>
+        
+
+                <!-------------------------- Headers Area   ----------------------->
+               <div class="d-flex">
+                <div class="row mt-5"  >
+
+                    <span class="w-50 row ">
+                        <h6 class="w-50 fw-bold border-dark">Booking No :</h6>
+                        <p class="w-50">{{lblBookingNo}}</p>
+                    </span>
+                    <span class="w-50 row ">
+                        <h6 class="w-50 fw-bold">Booking Date :</h6>
+                            <p class="w-50">{{lblBookingDate |date:'yyyy-MM-dd'}}</p>
+                    </span >
+                    <span class="w-50 row" *ngIf="lblAdvanceJvNo != '-' || lblAdvanceJvNo != null">
+                        <h6 class="w-50 fw-bold">Advance Voucher # :</h6>
+                        <p class="w-50">{{lblAdvanceJvNo}}</p>
+                    </span>
+                    <span class="w-50 row" *ngIf="lblRefundJvNo != '-' || lblRefundJvNo != null" >
+                        <h6 class="w-50 fw-bold">Refund Voucher # :</h6>
+                        <p class="w-50">{{lblRefundJvNo}}</p>
+                    </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50  fw-bold">Booking Status :</h6>
+                            <p class="w-50">{{lblBookingStatus}}</p>
+                    </span>
+                   
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Booking Through :</h6>
+                        <p class="w-50">{{lblBookingChannel}}</p>
+                    </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Customer Name :</h6>
+                            <p class="w-50">{{lblCustomerName}}</p>
+                    </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Arrival Date :</h6>
+                            <p class="w-50">{{lblArrivalDate |date:'yyyy-MM-dd'}}</p>
+
+                    </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Departure Date :</h6>
+                            <p class="w-50">{{lblDepartureDate |date:'yyyy-MM-dd'}}</p>
+                    </span>
+                    <span class="w-50 row"> 
+                        <h6 class="w-50 fw-bold">Confirmation Date :</h6>
+                        <p class="w-50">{{lblConfirmationDate |date:'yyyy-MM-dd'}}</p>
+                    </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Remarks :</h6>
+                        <p class="w-50">{{lblBookingRemarks}}</p>
+                    </span>
+
+
+                </div>
+                
+               </div>
+               <hr>
+
+               <!-----------------------   Print Table Area --------------------->
+
+               <div>
+                <table class="table">
+                    <thead>
+                        
+                        <th>Description</th>
+                        <th>Rent</th>
+                        <th>Days</th>
+                        <th>Total Rent</th>
+                        <th>Advance</th>
+                        <th>Remaining</th>
+                        
+                    
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>{{lblRoomTitle}}</td>
+                            <td>{{lblRentPerDay |number}}</td>
+                            <td>{{lblTotalDays}}</td>
+                            <td>{{lblTotalDays * lblRentPerDay |number}}</td>
+                            <td>{{lblPaidAmount |number}}</td>
+                            <td>{{(lblTotalDays * lblRentPerDay) -lblPaidAmount |number}}</td>
+                        </tr>
+                    </tbody>
+                   
+                </table>
+               </div>
+
+
+               <div class="d-flex justify-content-between  mt-5 pt-5">
+                <h6 class="border-bottom fw-bold border-dark">Account Officer</h6>
+                <h6 class="border-bottom fw-bold border-dark">Front Desk Officer</h6>
+                <h6 class="border-bottom fw-bold border-dark">Guest Signature</h6>
+               </div>
+        
+        
+        
+            </div>
+        </div>
 
 
     </mat-tab>
