--- a/src/app/Components/Navigation/top-navbar/top-navbar.component.html
+++ b/src/app/Components/Navigation/top-navbar/top-navbar.component.html
@@ -55,6 +55,15 @@
       </div>
     </div>
 
+    <div class="dropdown cursorPointer ">
+      <a class="list-itm">
+        Reports<mat-icon class="sideicon mb-1">arrow_drop_down</mat-icon></a>
+      <div class="dropdown-content">
+        <a class="list-itm" routerLink="./brptdw" routerLinkActive="active">Booking Report (Datewise)</a>
+   
+      </div>
+    </div>
+
 
 
 
