--- a/src/app/Components/booking/booking.component.html
+++ b/src/app/Components/booking/booking.component.html
@@ -16,15 +16,18 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="w-50 p-2"> 
-            <mat-label>Select Customer</mat-label>
-            <mat-select [(ngModel)]="partyID">
-                <mat-option><ngx-mat-select-search [(ngModel)]="searchParty"
-                    [placeholderLabel]="'Search...'" [noEntriesFoundLabel]="'Not found'"
-                    name="search"></ngx-mat-select-search></mat-option>
-                <mat-option *ngFor="let item of partyList" [value]="item.partyID">{{item.partyName}}</mat-option>
-            </mat-select>
-        </mat-form-field>
+        <span class="w-50 "> 
+            <mat-form-field appearance="outline" class="col-lg-5 p-2"> 
+                <mat-label>Select Customer</mat-label>
+                <mat-select [(ngModel)]="partyID">
+                    <mat-option><ngx-mat-select-search [(ngModel)]="searchParty"
+                        [placeholderLabel]="'Search...'" [noEntriesFoundLabel]="'Not found'"
+                        name="search"></ngx-mat-select-search></mat-option>
+                    <mat-option *ngFor="let item of partyList" [value]="item.partyID">{{item.partyName}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button class="btn btn-primary col-lg-1" style="height: 55px;" (click)="addCustomer()">  <mat-icon>add</mat-icon></button>
+        </span>
 
 
         <mat-form-field class="w-50 p-2" appearance="outline">
@@ -77,13 +80,27 @@
           </mat-form-field>
 
 
+          <mat-form-field appearance="outline" class="w-50 p-2">
+            <mat-label>Refrence Name</mat-label>
+            <input type="text"    matInput [(ngModel)]="refrenceName" />
+            
+          </mat-form-field>
 
+          <mat-form-field appearance="outline" class="w-50 p-2">
+            <mat-label>Number Of Person</mat-label>
+            <input type="number" min="0"    matInput [(ngModel)]="numberOfPersons" />
+            
+          </mat-form-field>
 
           <mat-form-field appearance="outline" class="w-50 p-2">
             <mat-label>Total Days</mat-label>
-            <input type="number"    matInput [(ngModel)]="TotalDays" />
+            <input type="number" min="0"   matInput [(ngModel)]="TotalDays" />
             
           </mat-form-field>
+
+          
+
+         
 
           <mat-form-field appearance="outline" class="w-50 p-2">
             <mat-label>Booking Channel</mat-label>
@@ -154,10 +171,11 @@
                         <th>Confirmation Date</th>
                         <th>Status</th>
                         <th>Actions</th>
+                        <th>Details</th>
                         <th>Print</th>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of SavedData | filter: searchBooking ; index as index">
+                        <tr *ngFor="let item of SavedData | filter: searchBooking |paginate:{ id:'voucherData', itemsPerPage : tableSize,currentPage : page, totalItems : count, }   ; index as index">
                             <td>{{index+1}}</td>
                             <td>{{item.bookingID}}</td>
                             <td>{{item.bookingDate |date:'yyyy-MM-dd'}}</td>
@@ -180,6 +198,7 @@
                                 <span class="text-danger" *ngIf="item.bookingStatus == 'Cancelled' ">Bill Cancelled</span>
                                 <span class="text-danger" *ngIf="item.bookingStatus == 'Refunded' ">Bill Refunded</span>
                             </td>
+                            <td><mat-icon class="text-success cursorPointer" (click)="getBookingDetail(item)">receipt</mat-icon></td>
                             <td class="cursorPointer"><mat-icon class="text-primary" (click)="printBooking(item)">print</mat-icon></td>
                            
             
@@ -187,6 +206,21 @@
                         
                     </tbody>
                 </table>
+                <div class="d-flex" *ngIf="SavedData.length >  fixedTableSize">
+                    <mat-hint class="me-1 text-secondary">Total Rows : ({{SavedData.length}})    </mat-hint>
+                    <pagination-controls
+                    previousLabel="Prev"
+                    nextLabel="Next"
+                    (pageChange)="onTableDataChange($event)"
+                    ></pagination-controls>
+                    
+    
+                    <mat-hint class=" me-1 text-secondary">Rows Per Page </mat-hint>
+                    <select class="text-white" style="width: 50px; height: 25px;background-color: rgb(75, 164, 248);" (change)="onTableSizeChange($event)">
+                        <option *ngFor=" let item of tableSizes">{{item}}</option>
+                    </select>
+                    
+                </div>
             </div>
 
          
@@ -238,10 +272,11 @@
                             width="100">
                     </span>
                     <span class="mt-3">
-                        <h3>Black Gold Hotel</h3>
-                            <p class="text-end" style="margin-top: -15;">Mehria Town Pvt.(Ltd)</p>
-                        <p style="margin-top: -20;">Kamra Road Attock</p>
-                        <p style="margin-top: -15;">Phone No: 057-2364801-2</p>
+                        <h3>{{CompanyName}}</h3>
+                            <p class="w-75 text-end" style="margin-top: -15;" >{{CompanyName2}}</p>
+                        <p style="margin-top: -20;" >{{companyAddress}}</p>
+                        <p style="margin-top: -15;">{{companyPhone}}  - {{companyMobileno}}</p>
+                        <p style="margin-top: -15;">{{companyEmail}}</p>
                     </span>
                     <span>
                         <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
@@ -260,18 +295,22 @@
                         <h6 class="w-50 fw-bold border-dark">Booking No :</h6>
                         <p class="w-50">{{lblBookingNo}}</p>
                     </span>
+
                     <span class="w-50 row ">
                         <h6 class="w-50 fw-bold">Booking Date :</h6>
                             <p class="w-50">{{lblBookingDate |date:'yyyy-MM-dd'}}</p>
                     </span >
-                    <span class="w-50 row" *ngIf="lblAdvanceJvNo != '-' || lblAdvanceJvNo != null">
+
+                    <span class="w-50 row" *ngIf="lblBookingStatus === 'Confirmed' || lblBookingStatus === 'Refunded'">
                         <h6 class="w-50 fw-bold">Advance Voucher # :</h6>
                         <p class="w-50">{{lblAdvanceJvNo}}</p>
                     </span>
-                    <span class="w-50 row" *ngIf="lblRefundJvNo != '-' || lblRefundJvNo != null" >
+
+                    <span class="w-50 row" *ngIf="lblBookingStatus === 'Refunded'" >
                         <h6 class="w-50 fw-bold">Refund Voucher # :</h6>
                         <p class="w-50">{{lblRefundJvNo}}</p>
                     </span>
+
                     <span class="w-50 row">
                         <h6 class="w-50  fw-bold">Booking Status :</h6>
                             <p class="w-50">{{lblBookingStatus}}</p>
@@ -281,23 +320,52 @@
                         <h6 class="w-50 fw-bold">Booking Through :</h6>
                         <p class="w-50">{{lblBookingChannel}}</p>
                     </span>
+
                     <span class="w-50 row">
                         <h6 class="w-50 fw-bold">Customer Name :</h6>
                             <p class="w-50">{{lblCustomerName}}</p>
                     </span>
+
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Customer CNIC :</h6>
+                            <p class="w-50">{{lblPartyCNIC}}</p>
+                    </span>
+
                     <span class="w-50 row">
                         <h6 class="w-50 fw-bold">Arrival Date :</h6>
                             <p class="w-50">{{lblArrivalDate |date:'yyyy-MM-dd'}}</p>
-
+    
                     </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Arrival Time :</h6>
+                            <p class="w-50">{{lblArrivalTime}}</p>
+    
+                    </span>
+    
                     <span class="w-50 row">
                         <h6 class="w-50 fw-bold">Departure Date :</h6>
                             <p class="w-50">{{lblDepartureDate |date:'yyyy-MM-dd'}}</p>
                     </span>
+                    <span class="w-50 row">
+                        <h6 class="w-50 fw-bold">Departure Time :</h6>
+                            <p class="w-50">{{lblDepartureTime}}</p>
+                    </span>
+
                     <span class="w-50 row"> 
                         <h6 class="w-50 fw-bold">Confirmation Date :</h6>
                         <p class="w-50">{{lblConfirmationDate |date:'yyyy-MM-dd'}}</p>
                     </span>
+
+                    <span class="w-50 row" *ngIf="lblReference == ''"> 
+                        <h6 class="w-50 fw-bold">Refrence :</h6>
+                        <p class="w-50">{{lblReference }}</p>
+                    </span>
+    
+                    <span class="w-50 row" *ngIf="lblPersons != 0"> 
+                        <h6 class="w-50 fw-bold">Persons :</h6>
+                        <p class="w-50">{{lblPersons }}</p>
+                    </span>
+
                     <span class="w-50 row">
                         <h6 class="w-50 fw-bold">Remarks :</h6>
                         <p class="w-50">{{lblBookingRemarks}}</p>
