--- a/src/app/Reports/budget-report/budget-report.component.html
+++ b/src/app/Reports/budget-report/budget-report.component.html
@@ -37,8 +37,8 @@
                 <span class="mt-3">
                     
     
-                    <h1>Mehria Mall & Residencia</h1>
-                    <h5 style="margin-top: -15px;" class="text-end">Mehria Town Pvt.(Ltd)</h5>
+                    <h1>{{CompanyName}}</h1>
+                    <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
     
                     <h1>Monthly Budget Report</h1>
                     <h4 style="margin-top:-5px"><b>For Month:</b> {{budgetMonth | date:'yyyy-MM'}} </h4>
