--- a/src/app/Reports/cashbook/cashbook.component.html
+++ b/src/app/Reports/cashbook/cashbook.component.html
@@ -44,8 +44,8 @@
             <span class="mt-3">
                 
 
-                <h1>Mehria Mall & Residencia</h1>
-                <h5 style="margin-top: -15px;" class="text-end">Mehria Town Pvt.(Ltd)</h5>
+                <h1>{{CompanyName}}</h1>
+                <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
 
                 
                 <h1 style="margin-top:-15px">Cash Book</h1>
