--- a/src/app/Reports/ledger/ledger.component.html
+++ b/src/app/Reports/ledger/ledger.component.html
@@ -59,8 +59,8 @@
                 <span class="mt-3">
                     
 
-                    <h1>Mehria Mall & Residencia</h1>
-                    <h5 style="margin-top: -15px;" class="text-end">Mehria Town Pvt.(Ltd)</h5>
+                    <h1>{{CompanyName}}</h1>
+                    <h5 style="margin-top: -15px;" class="text-end">{{CompanyName2}}</h5>
 
                     <h1>Ledger Report</h1>
                     <h3 style="margin-top:-10px">{{curCOATitle}}</h3>
