--- a/src/app/Reports/listof-customers/listof-customers.component.html
+++ b/src/app/Reports/listof-customers/listof-customers.component.html
@@ -17,8 +17,8 @@
                     <span class="mt-3">
                         
     
-                        <h1>Mehria Mall & Residencia</h1>
-                        <h5 style="margin-top: -15px;" class="text-end">Mehria Town Pvt.(Ltd)</h5>
+                        <h1>{{CompanyName}}</h1>
+                        <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
     
                         <h1>List Of Customers</h1>
                     </span>
