--- a/src/app/Components/Navigation/top-navbar/top-navbar.component.html
+++ b/src/app/Components/Navigation/top-navbar/top-navbar.component.html
@@ -10,8 +10,10 @@
 
     <a class="list-itm" routerLink="./voucher" routerLinkActive="active">
       Voucher</a>
-      <a class="list-itm" routerLink="./bkng" routerLinkActive="active">
+    <a class="list-itm" routerLink="./bkng" routerLinkActive="active">
         Booking</a>
+    <a class="list-itm" routerLink="./chkio" routerLinkActive="active">
+          Check In Out</a>
 
       <a class="list-itm" routerLink="./bdgtng" routerLinkActive="active">
         Budgeting</a>
