--- a/src/app/Components/settings/settings.component.html
+++ b/src/app/Components/settings/settings.component.html
@@ -19,6 +19,9 @@
         <mat-tab label="ADD CATEGORY" class="h-100">
             <app-category></app-category>
         </mat-tab>
+        <mat-tab label="ADD SERVICE" class="h-100">
+            <app-service></app-service>
+        </mat-tab>
  
     <mat-tab label="ADD NOTES" class="h-100">
         <app-coa-notes></app-coa-notes>
