--- a/src/app/Components/Navigation/top-navbar/top-navbar.component.html
+++ b/src/app/Components/Navigation/top-navbar/top-navbar.component.html
@@ -61,7 +61,15 @@
       <a class="list-itm">
         Reports<mat-icon class="sideicon mb-1">arrow_drop_down</mat-icon></a>
       <div class="dropdown-content">
+        <a class="list-itm" routerLink="./rptcust" routerLinkActive="active">List of Customers</a>
+        <a class="list-itm" routerLink="./rptlor" routerLinkActive="active">List of Rooms</a>
         <a class="list-itm" routerLink="./brptdw" routerLinkActive="active">Booking Report (Datewise)</a>
+        <a class="list-itm" routerLink="./brptpw" routerLinkActive="active">Booking Report (Customerwise)</a>
+        <a class="list-itm" routerLink="./ciorptdw" routerLinkActive="active">Check In Out Report (Datewise)</a>
+        <a class="list-itm" routerLink="./ciorpttdw" routerLinkActive="active">Check In Out Report (Type & Datewise)</a>
+        <a class="list-itm" routerLink="./ciorptpw" routerLinkActive="active">Check In Out Report (Customerwise)</a>
+        <a class="list-itm" routerLink="./srptdw" routerLinkActive="active">Services Report (Datewise)</a>
+        <a class="list-itm" routerLink="./srptsdw" routerLinkActive="active">Services Report (Service & Datewise)</a>
    
       </div>
     </div>
