--- a/src/app/Components/voucherform/voucherform.component.html
+++ b/src/app/Components/voucherform/voucherform.component.html
@@ -292,7 +292,7 @@
 
 
 
-            <mat-progress-bar mode="indeterminate" *ngIf="SavedVoucherData == ''"></mat-progress-bar>
+            <mat-progress-bar mode="indeterminate" *ngIf="loadingBar == 'start'"></mat-progress-bar>
             <table class="col-lg-12  table table-hover bg-light">
 
                 <thead>
