--- a/src/app/Components/booking/booking.component.html
+++ b/src/app/Components/booking/booking.component.html
@@ -41,7 +41,7 @@
 
         <mat-form-field appearance="outline" class="w-50 p-2"> 
             <mat-label>Rent</mat-label>
-            <input matInput type="text" [(ngModel)]="rentPerDay">
+            <input matInput type="number" min="0" class="numOnly" (keypress)="numberOnly($event)"  [(ngModel)]="rentPerDay">
         </mat-form-field>
 
 
@@ -88,13 +88,13 @@
 
           <mat-form-field appearance="outline" class="w-50 p-2">
             <mat-label>Number Of Person</mat-label>
-            <input type="number" min="0"    matInput [(ngModel)]="numberOfPersons" />
+            <input type="number" min="0" class="numOnly" (keypress)="numberOnly($event)"   matInput [(ngModel)]="numberOfPersons" />
             
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="w-50 p-2">
             <mat-label>Total Days</mat-label>
-            <input type="number" min="0"   matInput [(ngModel)]="TotalDays" />
+            <input type="number" min="0" class="numOnly" (keypress)="numberOnly($event)"     matInput [(ngModel)]="TotalDays" />
             
           </mat-form-field>
 
@@ -110,9 +110,9 @@
             
           </mat-form-field>
 
-          <mat-form-field appearance="outline" class="w-50 p-2">
+          <mat-form-field appearance="outline" class="w-100 p-2">
             <mat-label>Description</mat-label>
-            <textarea type="Text"    matInput [(ngModel)]="bookingDescription"></textarea>
+            <textarea type="Text" rows="5"   matInput [(ngModel)]="bookingDescription"></textarea>
             
           </mat-form-field>
 
@@ -159,7 +159,7 @@
             <hr>
 
 
-            <mat-progress-bar mode="indeterminate" *ngIf="SavedData == ''"></mat-progress-bar>
+            <mat-progress-bar mode="indeterminate" *ngIf="loadingBar == 'start'"></mat-progress-bar>
             <div class="text-center">
                 <table class="table table-hover">
                     <thead>
@@ -219,7 +219,7 @@
                     
     
                     <mat-hint class=" me-1 text-secondary">Rows Per Page </mat-hint>
-                    <select class="text-white" style="width: 50px; height: 25px;background-color: rgb(75, 164, 248);" (change)="onTableSizeChange($event)">
+                    <select class="text-white"  style="width: 50px; height: 25px;background-color: rgb(75, 164, 248);" (change)="onTableSizeChange($event)">
                         <option *ngFor=" let item of tableSizes">{{item}}</option>
                     </select>
                     
