--- a/src/app/Components/budgetting/budgetting.component.html
+++ b/src/app/Components/budgetting/budgetting.component.html
@@ -47,8 +47,8 @@
         
             <div class="container-fluid pt-3 row " >
 
-                <div class="w-75 " style="height: 500px;overflow-y: scroll;">
-                    <mat-card class="h-100 shadow bg-light">
+                <div class="w-75 bg-white" style="height: 500px;overflow-y: scroll;">
+                    <mat-card class="shadow bg-light m-1">
         
                         <table class="table text-center">
                             <thead class="border-bottom">
@@ -70,8 +70,9 @@
                         </table>
                     </mat-card>
                 </div>
+
                 <div class="w-25" style="height: 500px;overflow-y: scroll;">
-                    <mat-card class="h-100 p-3 shadow bg-light text-center">
+                    <mat-card class="p-3  shadow bg-light text-center m-1" style="height: 500px;">
                           <h1 class=" mt-5 ">Total</h1>
 
                           <span class="mt-4 text-danger"  style="font-size: 50px;">{{TotalAmount | number}}</span>
@@ -137,10 +138,10 @@
                             width="150">
                     </span>
                     <span class="mt-3">
-                        <h3>Mehria Mall & Residencia</h3>
-                            <p class="text-end" style="margin-top: -15;">Mehria Town Pvt.(Ltd)</p>
-                        <p style="margin-top: -20;">Kamra Road Attock</p>
-                        <p style="margin-top: -15;">Phone No: 057-2364801-2</p>
+                        <h3>{{CompanyName}}</h3>
+                            <p class="" style="margin-top: -15;">{{CompanyName2}}</p>
+                        <p style="margin-top: -20;">{{companyAddress}}</p>
+                        <p style="margin-top: -15;">{{companyPhone}}</p>
                         <h2>Monthly Budget</h2>
                         <p>For the Month : {{lblBudgetDate | date:'yyyy-MM'}}</p>
                     </span>
@@ -201,9 +202,9 @@
 
 
                 <div class="d-flex justify-content-between mt-5 pt-5">
-                    <h5 class="border-bottom">Created BY</h5>
-                    <h5 class="border-bottom">Approved BY</h5>
-                    <h5 class="border-bottom">Checked BY</h5>
+                    <h5 class="border-bottom border-dark">Created BY</h5>
+                    <h5 class="border-bottom border-dark">Approved BY</h5>
+                    <h5 class="border-bottom border-dark">Checked BY</h5>
                    </div>
 
             </div>
