--- a/src/app/Components/check-inout/check-inout.component.html
+++ b/src/app/Components/check-inout/check-inout.component.html
@@ -49,42 +49,57 @@
                         <input type="time"    matInput [(ngModel)]="checkInTime" name="week" min="00:00:00" max="24:00:00"  />
                         
                       </mat-form-field>
+
+                      <mat-form-field class="col-lg-3  p-2" appearance="outline">
+                        <mat-label>Select Check Out Date</mat-label>
+                        <input readonly="true" matInput    [(ngModel)]="checkOutDate"
+                            [matDatepicker]="coDate" >
+                        <mat-datepicker-toggle matSuffix [for]="coDate"></mat-datepicker-toggle>
+                        <mat-datepicker #coDate></mat-datepicker>
+                    </mat-form-field>
+            
+            
+                      <mat-form-field appearance="outline" class="col-lg-3 p-2">
+                        <mat-label>Check Out time</mat-label>
+                        <input type="time"    matInput [(ngModel)]="checkOutTime" name="week" min="00:00:00" max="24:00:00"  />
+                        
+                      </mat-form-field>
         
         
                       <mat-form-field appearance="outline" class="col-lg-3 p-2">
                         <mat-label>Enter Rent Per Day</mat-label>
-                        <input matInput type="number" [(ngModel)]="rentPerDay" >
+                        <input matInput type="number" min="0" [(ngModel)]="rentPerDay" (keypress)="numberOnly($event)" >
                           
                     </mat-form-field>
         
                       <mat-form-field appearance="outline" class="col-lg-3 p-2">
                         <mat-label>Total Days</mat-label>
-                        <input type="number"  (keyup)="getTotal()"  matInput [(ngModel)]="totalDays" />
+                        <input type="number" min="0"  (keyup)="getTotal()" (keypress)="numberOnly($event)"  matInput [(ngModel)]="totalDays" />
                         
                       </mat-form-field>
         
                       <mat-form-field appearance="outline" class="col-lg-3 p-2">
                         <mat-label>Estimated Days</mat-label>
-                        <input type="number"    matInput [(ngModel)]="estimatedDays"  />
+                        <input type="number" min="0" (keypress)="numberOnly($event)"    matInput [(ngModel)]="estimatedDays"  />
                         
                       </mat-form-field>
         
         
                       <mat-form-field appearance="outline" class="col-lg-3 p-2">
                         <mat-label>Advance Amount</mat-label>
-                        <input type="number"    matInput [(ngModel)]="advanceAmount"  />
+                        <input type="number" min="0" (keypress)="numberOnly($event)"    matInput [(ngModel)]="advanceAmount"  />
                         
                       </mat-form-field>
         
                       <mat-form-field appearance="outline" class="col-lg-3 p-2">
                         <mat-label>Booking Advance</mat-label>
-                        <input type="number" [readonly]="true"    matInput [(ngModel)]="bookingAdvance"  />
+                        <input type="number" [readonly]="true" min="0" (keypress)="numberOnly($event)"    matInput [(ngModel)]="bookingAdvance"  />
                         
                       </mat-form-field>
 
                       <mat-form-field appearance="outline" class="col-lg-3 p-2s">
                         <mat-label>Select COA Title</mat-label>
-                        <mat-select [(ngModel)]="bookingID" [disabled]="advanceAmount == 0 || advanceAmount == null" >
+                        <mat-select [(ngModel)]="coaID" [disabled]="advanceAmount == 0 || advanceAmount == null" >
                             <mat-option><ngx-mat-select-search [(ngModel)]="coaSearch" [placeholderLabel]="'Search...'" [noEntriesFoundLabel]="'Not found'"></ngx-mat-select-search></mat-option>
                             <mat-option *ngFor="let item of coaList" [value]="item.coaID">{{item.coaTitle}} </mat-option>
                         </mat-select>
@@ -98,10 +113,10 @@
 
                     <!-------------  Total Section ------------------>
 
-                    <div class="w-25 border-start  ">
+                    <div class="w-25 border-start mb-1  ">
 
 
-                        <mat-card class="h-100 p-5">
+                        <mat-card class="h-100 p-5 " style="background-color: rgb(248, 248, 248);">
                             <h1 class="text-center text-dark" style="font-size: 50px;">Total</h1>
 
                             <h1 class="text-center text-danger pt-5" style="font-size: 50px;"  >{{billTotal |number:'1.0-0'}}</h1>
@@ -127,13 +142,13 @@
             
                             <mat-form-field appearance="outline" class="col-lg-2 p-2">
                                 <mat-label>Amount</mat-label>
-                                <input type="number"    matInput [(ngModel)]="amountCharged"  />
+                                <input type="number" min="1" (keypress)="numberOnly($event)"   matInput [(ngModel)]="amountCharged"  />
                                 
                               </mat-form-field>
             
                               <mat-form-field appearance="outline" class="col-lg-2 p-2">
                                 <mat-label>Quantity</mat-label>
-                                <input type="number"    matInput [(ngModel)]="quantity"  />
+                                <input type="number" min="1" (keypress)="numberOnly($event)"   matInput [(ngModel)]="quantity"  />
                                 
                               </mat-form-field>
         
@@ -233,9 +248,16 @@
 
         <div class="container-fluid bg-light ">
             
-                <mat-form-field appearance="outline" class="w-100 pt-2">
+                <mat-form-field appearance="outline" class="w-75 pt-2">
                     <mat-label>Search.....</mat-label>
                     <input type="text" matInput [(ngModel)]="searchText">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="w-25 ps-2">
+                    <mat-label>Select Type</mat-label>
+                    <mat-select [(ngModel)]="voucherType" (selectionChange)="filterSavedVouchers()">
+                        <mat-option *ngFor="let item of voucherTypesList" [value]="item.title">{{item.title}}</mat-option>
+                    </mat-select>
                 </mat-form-field>
                 
           
@@ -249,27 +271,208 @@
                         <th>Room Title</th>
                         <th>Customer Name</th>
                         <th>Check In Date</th>
+                        <th *ngIf="voucherType == 'Check Out'">Check Out Date</th>
                         <th>Amount</th>
-                        <th>ADD Service</th>
+                        <th *ngIf="voucherType == 'Check In'">ADD Service</th>
+                        <th > Add Documents</th>
+                        <th *ngIf="voucherType == 'Check In'"> Check Out</th>
+                        
+                        <th>Actions</th>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let item of SavedCheckINData |filter: searchText index as index">
+                        <tr *ngFor="let item of checkInOutList |filter: searchText |paginate:{ id:'voucherData', itemsPerPage : tableSize,currentPage : page, totalItems : count, }   index as index">
                             <td>{{index+1}}</td>
                             <td>{{item.checkinoutID}}</td>
                             <td>{{item.roomTitle}}</td>
                             <td>{{item.partyName}}</td>
-                            <td>{{item.checkInDate | date:'short'}}</td>
-                            <td>{{(item.rentPerDay * item.totalDays) + (item.servicesTotalAmount)}}</td>
-                            <td class="text-success cursorPointer " (click)="addNewService(item)"><mat-icon>room_service</mat-icon></td>
+                            <td >{{item.checkInDate | date:'short'}}</td>
+                            <td *ngIf="item.activeStatus == false" >{{item.checkOutDate | date:'short'}}</td>
+                            <td>{{(item.rentPerDay * item.totalDays) + (item.servicesTotalAmount) |number}}</td>
+                            <td *ngIf="item.activeStatus == true"  class="text-success cursorPointer " (click)="addNewService(item)"><mat-icon>room_service</mat-icon></td>
+                            <td  class="text-primary cursorPointer " (click)="addDocuments(item)" ><mat-icon>add_photo_alternate</mat-icon></td>
+                            <td *ngIf="item.activeStatus == true" class="text-warning cursorPointer " (click)="checkOut(item)"><mat-icon>check_box</mat-icon></td>
+                          
+                            <td class="cursorPointer " >
+                                <mat-icon class="text-success" (click)="getCioVoucherDetails(item)">receipt</mat-icon>
+                                <mat-icon class="text-primary" (click)="print(item)">print</mat-icon>
+                               
+                            </td>
+
                         </tr>
                     </tbody>
                 </table>
+
+                <div class="d-flex" >
+                    <mat-hint class="me-1 text-secondary">Total Rows : ({{checkInOutList.length}})    </mat-hint>
+                    <pagination-controls
+                    previousLabel="Prev"
+                    nextLabel="Next"
+                    (pageChange)="onTableDataChange($event)"
+                    ></pagination-controls>
+                    
+    
+                    <mat-hint class=" me-1 text-secondary">Rows Per Page </mat-hint>
+                    <select class="text-white" style="width: 50px; height: 25px;background-color: rgb(75, 164, 248);" (change)="onTableSizeChange($event)">
+                        <option *ngFor=" let item of tableSizes" >{{item}}</option>
+                    </select>
+                    
+                </div>
             </div>
            
 
          
         </div>
 
+
+
+        <div id="printDiv" class="d-none">
+
+           
+    
+             
+                <div class="text-end ">{{lblVoucherPrintDate |date:'short'}}</div>
+                 <!-------------------------    Top Logo Section -------------------->
+                 <div class="text-center border-bottom d-flex justify-content-between">
+                    <span>
+                        <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100"
+                            width="100">
+                    </span>
+                    <span class="mt-3">
+                        <h3>{{CompanyName}}</h3>
+                            <p class="w-75 text-end" style="margin-top: -15;" >{{CompanyName2}}</p>
+                        <p style="margin-top: -20;" >{{companyAddress}}</p>
+                        <p style="margin-top: -15;">{{companyPhone}}  - {{companyMobileno}}</p>
+                        <p style="margin-top: -15;">{{companyEmail}}</p>
+                    </span>
+                    <span>
+                        <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
+                            width="100">
+                    </span>
+            
+            
+                </div>
+
+
+                <div class="d-flex">
+                    <div class="row mt-5"  >
+    
+                        <span class="w-50 row ">
+                            <h6 class="w-50 fw-bold border-dark">Voucher No :</h6>
+                            <p class="w-50">{{lblVoucherNo}}</p>
+                        </span>
+
+                        <span class="w-50 row ">
+                            <h6 class="w-50 fw-bold border-dark">Booking ID:</h6>
+                            <p class="w-50">{{lblBookingID}}</p>
+                        </span>
+
+                        <span class="w-50 row ">
+                            <h6 class="w-50 fw-bold border-dark">Arrival Date:</h6>
+                            <p class="w-50">{{lblArrivalDate | date:'short'}}</p>
+                        </span>
+
+                        <span class="w-50 row ">
+                            <h6 class="w-50 fw-bold border-dark">Departure Date:</h6>
+                            <p class="w-50">{{lblDepartureDate | date:'short'}}</p>
+                        </span>
+
+                        <span class="w-50 row ">
+                            <h6 class="w-50 fw-bold border-dark">Customer Name:</h6>
+                            <p class="w-50">{{lblPartyName }}</p>
+                        </span>
+
+                        
+    
+                    </div>
+
+                    
+                   </div>
+
+                      <!---------------------- Room Talbe ----------------->
+                   
+                   <div>
+                    <div class="text-center border border-dark">
+                        <h3 >Room Details</h3>
+                    </div>
+                    <table class="table">
+                        <thead>
+                            <th>S#</th>
+                            <th>Description</th>
+                            <th>Days</th>
+                            <th>Rent</th>
+                            <th>Total</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>{{lblRoomNo}}</td>
+                                <td>{{lblTotalDays |number}}</td>
+                                <td>{{lblRentPerDay |number}}</td>
+                                <td>{{lblTotalDays * lblRentPerDay |number}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+
+                <!---------------------- Services Talbe ----------------->
+
+                <div *ngIf="lblServiceList != ''">
+                    <div class="text-center border border-dark">
+                        <h3 >Service Details</h3>
+                    </div>
+                    <table class="table">
+                        <thead>
+                            <th>S#</th>
+                            <th>Description</th>
+                            <th>Qty</th>
+                            <th>Amount</th>
+                            <th>Total</th>
+                            <th>Date</th>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of lblServiceList index as index">
+                                <td>{{index+1}}</td>
+                                <td>{{item.serviceTitle}}</td>
+                                <td>{{item.quantity |number}}</td>
+                                <td>{{item.amountCharged |number}}</td>
+                                <td>{{item.amountCharged * item.quantity |number}}</td>
+                                <td>{{item.serviceDate |date:'short'}}</td>
+                                
+                            </tr>
+                            <tr>
+                                <td class="fw-bold" colspan="4">Total</td>
+                                <td class="fw-bold" >{{lblServicesAmount |number}}</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+            
+                   
+                    <span class="w-100 text-end row border-bottom border-dark mb-1 ">
+                        <h4 class="w-75 fw-bold border-dark">Total</h4>
+                        <h4 class="w-25 text-end">{{lblRentPerDay * lblTotalDays + lblServicesAmount |number}}</h4>
+                    </span>
+
+                    <span class="w-100 text-end row border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false" >
+                        <h4 class="w-75 fw-bold border-dark">Discount</h4>
+                        <h4 class="w-25 text-end">{{lblDiscount|number}}</h4>
+                    </span>
+
+                    <span class="w-100 text-end row  border-bottom border-dark mb-1" *ngIf="lblActiveStatus == false">
+                        <h4 class="w-75 fw-bold border-dark">Net Total</h4>
+                        <h4 class="w-25 text-end">{{(lblRentPerDay * lblTotalDays + lblServicesAmount) - lblDiscount|number}}</h4>
+                    </span>
+                    
+                    
+              
+   
+
+        </div>
 
       
 
