--- a/src/app/Components/voucher-supervision/voucher-supervision.component.html
+++ b/src/app/Components/voucher-supervision/voucher-supervision.component.html
@@ -143,24 +143,26 @@
             <div class="mt-2">
                 
                 <!-------------------------    Top Logo Section -------------------->
-                <div class="text-center border-bottom d-flex justify-content-between">
-                    <span>
-                        <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100"
-                            width="120">
-                    </span>
-                    <span class="mt-3">
-                        <h3>Mehria Mall & Residencia</h3>
-                            <p class="text-end" style="margin-top: -15;">Mehria Town Pvt.(Ltd)</p>
-                        <p style="margin-top: -20;">Kamra Road Attock</p>
-                        <p style="margin-top: -15;">Phone No: 057-2364801-2</p>
-                    </span>
-                    <span>
-                        <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
-                            width="100">
-                    </span>
-            
-            
-                </div>
+               <!-------------------------    Top Logo Section -------------------->
+               <div class="text-center border-bottom d-flex justify-content-between">
+                <span>
+                    <img src="{{logo}}" style="color: black;" alt="" srcset="" height="100"
+                        width="100">
+                </span>
+                <span class="mt-3">
+                    <h3>{{CompanyName}}</h3>
+                        <p class="text-end w-75" style="margin-top: -15;">{{CompanyName2}}</p>
+                    <p style="margin-top: -20;">{{companyAddress}}</p>
+                    <p style="margin-top: -15;">{{companyPhone}} , {{companyMobileno}}</p>
+                    <p style="margin-top: -15;">{{companyEmail}}</p>
+                </span>
+                <span>
+                    <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
+                        width="100">
+                </span>
+        
+        
+            </div>
         
 
                 <!-------------------------- Headers Area   ----------------------->
