--- a/src/app/Reports/booking-rpt-date-wise/booking-rpt-date-wise.component.html
+++ b/src/app/Reports/booking-rpt-date-wise/booking-rpt-date-wise.component.html
@@ -48,11 +48,17 @@
                         width="100">
                 </span>
                 <span class="mt-3">
-                    <h3>{{CompanyName}}</h3>
-                        <p class="text-end" style="margin-top: -15;">{{CompanyName2}}</p>
-                    <p style="margin-top: -20;">Booking Report {{bookingType}}</p>
-                    <p style="margin-top: -15;">From : {{fromDate | date:'yyyy-MM-dd'}} To: {{toDate |date:'yyyy-MM-dd'}}</p>
+                    
+
+                    <h1 >{{CompanyName}}</h1>
+                    <h5 style="margin-top: -15px;" class="text-end">{{CompanyName2}}</h5>
+
+                    <h1>Booking Report {{bookingType}}</h1>
+                   
+                    <h4 style="margin-top:-5px"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</h4>
+                  
                 </span>
+                
                 <span>
                     <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
                         width="100">
@@ -70,11 +76,13 @@
                         <th>Booking Date</th>
                         <th>Room Name</th>
                         <th>Customer Name</th>
-                        <th>Rent</th>
+                        
                         <th>Arrival</th>
                         <th>Departure</th> 
                         
                         <th>Status</th>
+                        <th>Rent</th>
+                        <th>Advance</th>
                        
                     </thead>
                     <tbody>
@@ -84,11 +92,13 @@
                             <td>{{item.bookingDate |date:'yyyy-MM-dd'}}</td>
                             <td>{{item.roomTitle}}</td>
                             <td>{{item.partyName}}</td>
-                            <td>{{item.rentPerDay |number}}</td>
+                            
                             <td>{{item.dateOfArrival | date:'yyyy-MM-dd'}} </td>
                             <td>{{item.dateOfDeparture | date:'yyyy-MM-dd'}} </td>
                            
                             <td>{{item.bookingStatus}} </td>
+                            <td>{{item.rentPerDay |number}}</td>
+                            <td>{{item.advancePaid |number}}</td>
 
                            
                         </tr>
