--- a/src/app/Reports/daily-transaction-rpt/daily-transaction-rpt.component.html
+++ b/src/app/Reports/daily-transaction-rpt/daily-transaction-rpt.component.html
@@ -118,14 +118,14 @@
                 <tr *ngFor="let item of invoiceDetails; index as index">
                     <td>{{index+1}}</td>
                     <td>{{item.coaTitle}} ({{item.accountCode}})</td>
-                    <td>{{item.debit}}</td>
-                    <td>{{item.credit}}</td>
+                    <td>{{item.debit |number}}</td>
+                    <td>{{item.credit |number}}</td>
                 </tr>
                 <tr>
                     <td></td>
                     <td><b>Total</b></td>
-                    <td><b>{{lblDebitTotal}}</b></td>
-                    <td><b>{{lblCreditTotal}}</b></td>
+                    <td><b>{{lblDebitTotal |number}}</b></td>
+                    <td><b>{{lblCreditTotal |number}}</b></td>
                 </tr>
             </tbody>
         </table>
