--- a/src/app/Components/booking/confirm-booking/confirm-booking.component.html
+++ b/src/app/Components/booking/confirm-booking/confirm-booking.component.html
@@ -1,6 +1,6 @@
 <div >
 
-    <div class="text-center  mt-3 d-flex justify-content-between p-3"><p class="dialogueTitle">ADD Credentials</p><mat-icon class="cursorPointer" (click)="closeDialogue()">cancel</mat-icon></div>
+    <div class="text-center  mt-3 d-flex justify-content-between p-3"><p class="dialogueTitle">ADD CREDENTIALS</p><mat-icon class="cursorPointer" (click)="closeDialogue()">cancel</mat-icon></div>
 
     <div class="text-center container-fluid " >
         <mat-form-field class="w-100" appearance="outline">
@@ -23,7 +23,7 @@
         
     </div>
     <div class="justify-content-center d-flex" >
-        <button class="btn btn-success m-1" accesskey="s" (click)="save()"> {{actionBtn}} </button>
-        <button class="btn btn-danger m-1 " (click)="reset()"> Reset </button>
+        <button class="btn btn-success btn-save m-1" accesskey="s" (click)="save()"> {{actionBtn}} </button>
+        <button class="btn btn-danger btn-reset m-1 "  (click)="reset()"> Reset </button>
     </div>
 </div>
