--- a/src/app/Components/check-inout/check-out-form/check-out-form.component.html
+++ b/src/app/Components/check-inout/check-out-form/check-out-form.component.html
@@ -1,7 +1,7 @@
 <div>
 
     <div class="d-flex justify-content-between cursorPointer p-2 border-bottom">
-        <p class="dialogueTitle">CHECK OUt</p>
+        <p class="dialogueTitle">CHECK OUT</p>
         <mat-icon (click)="closeDialogue('')">cancel</mat-icon>
     </div>
 
@@ -9,13 +9,13 @@
     <div>
 
         <div class="text-center ">
-            <h3>Balance Amount : <b>{{remainingAmount}}</b></h3>
+            <h3 class="text-danger fw-bold">BALANCE AMOUNT: <b>{{remainingAmount}}</b></h3>
            
         </div>
 
 
         <mat-form-field class="w-50  p-2" appearance="outline">
-            <mat-label>Select Check Out Date</mat-label>
+            <mat-label>Check Out Date</mat-label>
             <input readonly="true" matInput    [(ngModel)]="checkOutDate" (dateChange)="getTotalDays()"
                 [matDatepicker]="coDate" >
             <mat-datepicker-toggle matSuffix [for]="coDate"></mat-datepicker-toggle>
@@ -57,8 +57,8 @@
 
 
             <div class="text-center p-3">
-                <button class="btn btn-success me-2" style="height: 55px; width: 100px;" (click)="insertCheckOut()">Save </button>
-                <button class="btn btn-danger " style="height: 55px;width: 100px;" (click)="closeDialogue('')">close </button>
+                <button class="btn btn-success me-2 btn-save"   (click)="insertCheckOut()">SAVE </button>
+                <button class="btn btn-danger btn-reset"  (click)="closeDialogue('')">CLOSE </button>
             </div>
 
     </div>
