--- a/src/app/Reports/plstat/plstat.component.html
+++ b/src/app/Reports/plstat/plstat.component.html
@@ -23,9 +23,9 @@
                         <button class="btn btn-primary w-25 btn-rpt me-2" (click)="getReport('R1')" >
                             Summary 1
                         </button>   
-                        <button class=" btn btn-primary w-25 btn-rpt me-2" (click)="getReport('R2')" >
+                        <!-- <button class=" btn btn-primary w-25 btn-rpt me-2" (click)="getReport('R2')" >
                             Summary 2
-                        </button>   
+                        </button>    -->
                     
                         <button class=" btn btn-primary w-25 btn-rpt" (click)="PrintTable()">
                            Print
@@ -42,22 +42,22 @@
             <div class="hide">
                 <div class="text-center border-bottom d-flex justify-content-between">
                     <span>
-                        <img src="{{logo}}"  srcset="" height="150"
-                            width="150">
+                        <img src="{{logo}}"  srcset="" height="100"
+                            width="100">
                     </span>
                     <span class="mt-3">
                         
     
-                        <h1>{{CompanyName}}</h1>
-                        <h5 style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</h5>
+                        <h3 class="rpt-cmpny">{{CompanyName}}</h3>
+                        <p style="margin-top: -15px;" class="text-end w-75">{{CompanyName2}}</p>
     
-                        <h1>Profit & Loss Statement</h1>
-                        <h4><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</h4>
+                        <h4 style="margin-top: -15px;" class="rpt-title">Profit & Loss Statement</h4>
+                        <p style="margin-top: -10px;"><b>From:</b> {{fromDate | date:'yyyy-MM-dd'}} <b>To:</b> {{toDate | date:'yyyy-MM-dd'}}</p>
                       
                     </span>
                     <span>
-                        <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="150"
-                            width="150">
+                        <img src="{{logo1}}" style="color: black;" alt="" srcset="" height="100"
+                            width="100">
                     </span>
             
             
